# progetto_labiagi

./: .gitignore  README.md  index.html  script.js  style.css  test.json
ws/.catkin_tools/profiles/default/: devel_collisions.txt
ws/devel/: .catkin  local_setup.sh  setup.sh
ws/devel/include/dr_ped/: Obiettivo.h
ws/devel/lib/dr_ped/: dr_ped
ws/devel/lib/pkgconfig/: dr_ped.pc
ws/devel/lib/python2.7/dist-packages/dr_ped/msg/: _Obiettivo.py  __init__.py
ws/devel/share/common-lisp/ros/dr_ped/msg/: Obiettivo.lisp  _package.lisp  _package_Obiettivo.lisp  dr_ped-msg.asd
ws/devel/share/dr_ped/cmake/: dr_ped-msg-extras.cmake  dr_ped-msg-paths.cmake  dr_pedConfig.cmake
ws/devel/share/gennodejs/ros/dr_ped/msg/: Obiettivo.js  _index.js
ws/devel/share/roseus/ros/dr_ped/: manifest.l
ws/devel/share/roseus/ros/dr_ped/msg/: Obiettivo.l
ws/src/dr_ped/: CMakeLists.txt  package.xml
ws/src/dr_ped/msg/: Obiettivo.msg  Stato.msg
ws/src/dr_ped/src/: .#dr_ped.cpp  autorizzati.txt  dr_ped.cpp
ws/src/dr_ped/src/.metals/: metals.h2.db
