<?xml version="1.0"?>
<package format="2">
  <name>dr_ped</name>
  <version>0.0.0</version>
  <description>The dr_ped package</description>
  <maintainer email="rotondi.1834864@studenti.uniroma1.it">dennis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
